# ColorChangingTriangle

./: CMakeLists.txt  ColourfulTriangles.cpp  README.md
Shaders/: FragmentShader.glsl  VertexShader.glsl
include/glad/: glad.h
src/: glad.c
